Fixes unread convo list items assuming wrong contrast color for text

--- a/scss/themes/_chat.scss
+++ b/scss/themes/_chat.scss
@@ -67,9 +67,9 @@
 .list-group-item-danger:not(.active) {
   &:hover,
   &:focus {
-    color: color-contrast($danger);
+    color: color-contrast($danger-bg-subtle);
   }
-  color: color-contrast($danger);
+  color: color-contrast($danger-bg-subtle);
 }
 
 .list-group-action.list-group-item {
